# py-swig-example

./: .envrc.dist  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml  pyrightconfig.json
src/: CMakeLists.txt  example.c  example.i
src/example/: CMakeLists.txt  example.c  example.h  example.i  example.pyi  hl_example.py
tests/: test_swig_example.py
